[package]
name = "fcitx5-tabledict"
version = "0.1.3"
authors = ["lilydjwg <lilydjwg@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }

[build-dependencies]
cc = "*"

[profile.release]
lto = true
